added log out button, and corrected the score's table display